# Menu-loader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
menu/: manage.py
menu/generation/: admin.py  models.py  urls.py  views.py
menu/generation/migrations/: 0001_initial.py
menu/generation/templatetags/: menu_loader.py
menu/menu/: settings.py  urls.py
menu/templates/: main.html  menu.html
