[tool.poetry]
name = "menu"
version = "0.1.0"
description = ""
authors = ["Baha Dzhalalov <mckinley666228.o@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.core.masonry.api"
